# thisabled-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  requirements-colab.txt  requirements.txt
configs/: module1_kcelectra.yaml  module1_kcelectra_ce.yaml  module1_kcelectra_final.yaml  module2_matching.yaml
data/: README.md
docs/: emergency_scenarios.md  label_mapping.md  matching_schema.md  reproducibility_pipeline.md
notebooks/: 01_eda.ipynb  02_train_module1.ipynb  03_evaluate_and_report.ipynb  04_run_full_pipeline.ipynb
reports/: D3_infra_validation_DEGRADED-RUN_emergency-absent.md  d1_report.md  final.md  present_results_final.md  presentation.html  report.html
scripts/: build_aihub_train.py  build_final_dataset.py  build_processed_dataset.py  build_real_holdout.py  download_seed_datasets.py  evaluate_fairness.py  evaluate_module2.py  evaluate_module2_fairness.py  evaluate_real_holdout.py  evaluate_shap.py  evaluate_synthetic.py  generate_d2_figures.py  generate_figures.py  generate_missing_jsons.py  generate_oof_logits.py  generate_real_holdout_figures.py  generate_shap_module2.py  oversample_fairness.py  run_full_pipeline.sh  synthesize_emergency.py  synthesize_emergency_template.py  train_lambdarank.py  train_module1.py  train_stacking.py
src/: __init__.py
tests/: test_build_dataset.py  test_build_final_dataset.py  test_build_final_dataset_oversample.py  test_dedup.py  test_fairness.py  test_focal_loss.py  test_label_mapping.py  test_metrics.py  test_module2_pair.py  test_seed.py  test_stacker.py  (+4 more)
(+49 files in other folders)
